# Chatterbox

./: README.md  docker-compose.yml
backend/: main.py
backend/libs/: ollama.py
backend_go/: Dockerfile  go.mod  go.sum  main.go
backend_go/controllers/: chat.go  errors.go
backend_go/libs/: ollama.go
backend_go/middleware/: cors.go
backend_go/ws/: upgrader.go
backend_py/: Pipfile  config.py  main.py
backend_py/routes/: __init__.py  chat.py
backend_rs/: Cargo.toml  Dockerfile
backend_rs/src/: config.rs  main.rs  routes.rs  websockets.rs
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: index.tsx
frontend/src/components/MessageBlock/: MessageBlock.tsx  index.tsx
frontend/src/layouts/: index.tsx
frontend/src/layouts/Footer/: Footer.tsx
frontend/src/layouts/Header/: Header.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/types/: Message.ts  index.ts
nginx/: nginx.conf
