[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
axum-client-ip = "0.6.0"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.30"
ollama-rs = { version = "0.2.1", features = ["stream"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
